--- a/index.html
+++ b/index.html
@@ -20,11 +20,16 @@
             <button class="download-button" onclick="displayClassTen()">CLASS 10<sup>th</sup></button>
             <p>Click on Your Class</p>
         </div>
-        <button class="download-button d-none" id="download-button" onclick="downloadTable()">Download Schedule</button>
+        <button class="download-button d-none" id="download-button-9" onclick="downloadTable9()">Download Schedule 9</button>
+        <button class="download-button d-none" id="download-button-10" onclick="downloadTable10()">Download Schedule 10</button>
     </div>
     
-        <div class="table-container" id="table-container">
+        <div class="table-container" id="table-container-9">
         
+        </div>
+
+        <div class="table-container" id="table-container-10">
+
         </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js"></script>
